tests/snapshots/cli__parent_unaffected.snap
---
source: tests/cli.rs
expression: "sandbox.taco(&[\"greet\"])"
---
exit code: 0
----- stdout -----
from-parent
