tests/snapshots/cli__passthrough_arguments.snap
---
source: tests/cli.rs
expression: "sandbox.taco(&[\"greet\", \"world\"])"
---
exit code: 0
----- stdout -----
world
