tests/snapshots/cli__passthrough_flags.snap
---
source: tests/cli.rs
expression: "sandbox.taco(&[\"greet\", \"--\", \"--flag\"])"
---
exit code: 0
----- stdout -----
--flag
