tests/snapshots/cli__print_flag.snap
---
source: tests/cli.rs
expression: "sandbox.taco(&[\"greet\", \"--print\"])"
---
exit code: 0
----- stdout -----
echo hello
