tests/snapshots/cli__print_flat.snap
---
source: tests/cli.rs
expression: "sandbox.taco_in(&sandbox.nested(), &[\"print\"])"
snapshot_kind: text
---
exit code: 0
----- stdout -----
Available commands:

taco build  echo local-build
taco tdd    echo parent-tdd
taco test   echo nested-test

3 commands
