tests/snapshots/cli__print_tree_wrapped.snap
---
source: tests/cli.rs
expression: "sandbox.taco_with_columns(\"40\", &[\"print\", \"--verbose\"])"
snapshot_kind: text
---
exit code: 0
----- stdout -----
Available commands:

<root>/project
├─ taco dev
│  m run dev
├─ taco format
│  prettier --cache --ignore-unknown \
│  --write .
└─ taco tw
   bun --bun \
   /Users/robin/github.com/tailwindlabs/tailwindcss/packages/cli/src/index.ts

3 commands
