tests/snapshots/cli__rm_local.snap
---
source: tests/cli.rs
expression: "sandbox.taco(&[\"rm\", \"greet\"])"
---
exit code: 0
----- stdout -----
Removed alias "greet"
